--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link rel="stylesheet" href="./global.css" />
+
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="board" id="board">
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+    </div>
+
+    <div class="winning-message" id="winning-message">
+        <div data-winning-message-text=""></div>
+        <button type="button" id="restart">Restart</button>
+    </div>
+
+    <script src="./main.js"></script>
 </body>
 </html>
