:art: style: change projetcts styles

--- a/piano/index.html
+++ b/piano/index.html
@@ -6,6 +6,8 @@
   
   <link rel="stylesheet" href="./style/main.css" />
 
+  <link rel="stylesheet" href="./style/global.css">
+
   <title>Document</title>
 </head>
 <body>
