--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE html>/
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&family=Rubik:wght@400;500;600&display=swap" />
+
     <link rel="stylesheet" href="./global.css" />
 
     <title>Document</title>
@@ -23,7 +29,11 @@
 
     <div class="winning-message" id="winning-message">
         <div data-winning-message-text=""></div>
-        <button type="button" id="restart">Restart</button>
+        
+        <button type="button" id="restart">
+            <span class="material-symbols-outlined">play_circle</span>
+            Jogar novamente
+        </button>
     </div>
 
     <script src="./main.js"></script>
