:sparkles: feat: change page title

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./global.css" />
 
-    <title>Document</title>
+    <title>Jogo da velha</title>
 </head>
 <body>
     <div class="board" id="board">
