--- a/movie-ai/index.html
+++ b/movie-ai/index.html
@@ -12,7 +12,9 @@
     
     <link rel="stylesheet" href="./global.css">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+
+    <title>movie ai</title>
 </head>
 <body>
     <section class="card">
