--- a/piano/index.html
+++ b/piano/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="./style/global.css">
 
-  <title>Document</title>
+  <title>Piano</title>
 </head>
 <body>
   <div id="piano">
