--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="./global.css">
 
-    <title>Document</title>
+    <title>Pokedex</title>
 </head>
 <body>
     <main>
