--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="./global.css">
   
-  <title>Document</title>
+  <title>Flappy bird</title>
 </head>
 <body>
   <canvas id="game-canvas" width="320" height="480"></canvas>
